# bare-hc

./: .gitignore  .prettierignore  CMakeLists.txt  README.md  binding.c  index.js  package.json  test.js
